# pi-templates

./: LICENSE
python/: Dockerfile  pyproject.toml  template.toml
python/.devcontainer/: devcontainer.json
python/{{ project }}/: entrypoint.py
