[tool.poetry]
name = "{{ project }}"
version = "{{ version }}"
description = "Your description here."
authors = ["{{ name }} <{{ email }}>"]
license = "{{ license }}"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
flake8 = "^3.9.0"
mypy = "^0.910"

[tool.poetry.scripts]
entrypoint = "{{ project }}.entrypoint:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"